--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,13 @@
 
   <body>
     <div class="container js-container">
-      <button type="button" class="js-mix-btn">MIX</button>
+      <!-- <button type="button" class="js-mix-btn">MIX</button> -->
       <!-- <button class="js-start-btn">START</button> -->
+      <div class="field__container">
+        <div class="field"></div>
+      </div>
       <div class="js-cells__container">
         <div class="cells__desk js-cells__desk"></div>
       </div>
-<div class="field"></div>
   </body>
 </html>
